fixed logo alignment for small screens

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ p {
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 #skills .image-container {
